# pivot-matrix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
assets/: README.md
scripts/: build_nuitka.py  build_windows.ps1  release_windows.py
src/pivot/: __init__.py  __main__.py  bootstrap.py  config.py  constants.py  logging_config.py  markdown_sanitize.py
src/pivot/application/: __init__.py  autosave.py  state.py
src/pivot/domain/: __init__.py  models.py
src/pivot/persistence/: __init__.py  json_store.py
src/pivot/ui/: __init__.py  components.py  main_window.py  markdown.py  theme.py  tray.py
tests/: test_app_state.py  test_config.py  test_domain_models.py  test_json_store.py  test_markdown.py
