[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pivot-matrix"
version = "0.1.0"
description = "Pivot is an offline-first Eisenhower Matrix desktop app for Windows."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Peter Hari" }]
keywords = ["productivity", "qt", "desktop", "eisenhower-matrix", "offline-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Scheduling",
]
dependencies = [
  "PySide6>=6.11,<7",
]

[project.optional-dependencies]
dev = [
  "mypy>=2.1.0,<3",
  "pytest>=9.0.3,<10",
  "ruff>=0.15.12,<0.16",
]
build = [
  "Nuitka>=4.1,<5",
]

[project.scripts]
pivot = "pivot.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
mypy_path = ["src"]
packages = ["pivot"]

[[tool.mypy.overrides]]
module = ["PySide6.*"]
ignore_missing_imports = true
